# world-relay

./: .env.local.example  .gitignore  AGENT.md  ARCHITECTURE.md  README.md  RELAY.md  STORE-SUBMISSION.md  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json  vitest.config.ts
contracts/: RelayAgentEscrow.sol  RelayAutomation.sol
contracts/script/: DeployV2.s.sol
contracts/src/: RelayAgentEscrowV2.sol  RelayDoubleOrNothing.sol  RelayEscrow.sol
mcp-server/: README.md  package.json
mcp-server/src/: index.ts
public/.well-known/: walletconnect.txt
scripts/: check-deadlines.ts  check-escrow.ts  claim-and-release.ts  drain-escrow.ts  fund-tasks.ts  fund-three.ts  refund-expired.ts  revoke-xmtp-installations.mjs
sdks/python/: LICENSE  README.md  pyproject.toml
sdks/python/relay_favours/: __init__.py  client.py  tools.py
src/__tests__/: feedback-tasks.test.ts  proof-of-favour.test.ts  rate-limit.test.ts  store.test.ts
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/components/: BottomNav.tsx  DailyChallenge.tsx  ErrorBoundary.tsx  Feed.tsx  FeedbackTasks.tsx  ProofOfFavourCard.tsx  RevealCard.tsx  StaggerList.tsx  TaskBoard.tsx  TaskMap.tsx  TaskMapFull.tsx  TaskSearch.tsx  VerificationBadge.tsx
src/hooks/: useScrollReveal.ts  useWorldUser.ts
src/lib/: agent-analytics.ts  agent-escrow.ts  agents.ts  ai-chat.ts  api-keys.ts  attestation.ts  chainlink-automation.ts  contracts.ts  daily-challenge.ts  escrow.ts  feedback-tasks.ts  image-upload.ts  messages.ts  minikit-helpers.ts  redis.ts  (+17 more)
(+69 files in other folders)
