[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relay-favours"
version = "0.1.0"
description = "Python SDK for RELAY FAVOURS — post tasks for verified humans from any AI agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "RELAY Team", email = "omorke@gmail.com" },
]
keywords = ["relay", "world-id", "langchain", "ai-agents", "human-in-the-loop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "langchain-core>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpserver>=1.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/MorkeethHQ/world-relay"
Documentation = "https://github.com/MorkeethHQ/world-relay/blob/main/AGENT.md"
Repository = "https://github.com/MorkeethHQ/world-relay"

[tool.hatch.build.targets.wheel]
packages = ["relay_favours"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.mypy]
python_version = "3.9"
strict = true
